# skillet

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  install.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml
.jules/: sentinel.md
.skillet/config/: config.json  sources.json
.skillet/skills/deploy-checklist/: SKILL.md
.skillet/skills/soultrace/: SKILL.md
docs/: AUTHORING.md  RELEASE.md
skills/: README.md
skills/deploy-checklist/: SKILL.md
skills/git-os/: SKILL.md
skills/sprint/: SKILL.md
src/open_skills/: cli.py
src/open_skills/config/: wizard.py
src/open_skills/installer/: config_gen.py  copier.py  hooks.py
src/open_skills/skills/: parser.py  registry.py  search.py
src/open_skills/templates/: claude.md.j2  copilot.md.j2
src/skillet/: __init__.py  cli.py
src/skillet/config/: project.py  settings.py  wizard.py
src/skillet/installer/: config_gen.py  copier.py  emitters.py  hooks.py
src/skillet/operations/: add_specs.py
src/skillet/skills/: parser.py  search.py
src/skillet/sources/: apply.py  github.py  store.py
src/skillet/templates/: agents.md.j2  claude.md.j2  gemini.md.j2
tests/: test_cli.py  test_copier.py  test_emitters.py  test_integration.py  test_lock.py  test_settings_config.py  test_skills.py  test_sources.py
